--- a/user-details.html
+++ b/user-details.html
@@ -3,7 +3,7 @@
 
 <head>
     <meta charset="utf-8">
-    <title>Akan Name Generator</title>
+    <title>week2-project Generator</title>
     <link rel="stylesheet" href="css/style.css" media="all">
     <link href="https://fonts.googleapis.com/css?family=Quicksand&display=swap" rel="stylesheet">
 </head>
